@@ -1,4 +1,6 @@
 Sigil v0.3.2 ADD_DATE
+    - added a new toolbar button for turning Tidy cleaning on/off; this option is also available
+    from the Tools menu (issue #553)
     - added support for TrueType Collection fonts with extension TTC
     - InDesign (as of CS5) refuses to list the fonts it embeds in the OPF manifest of the epub 
     files it exports, even though the epub standard demands it. This causes Sigil to not pick up
